# Arabic-OCR

./: Arabic_OCR.pro  CMakeLists.txt  README.md  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  preprocess.cpp  preprocess.h  recognition.cpp  recognition.h  segmentation.cpp  segmentation.h
